--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head class="photo">
   <meta charset="utf-8" http-equiv="refresh" content="30">
   <title>Nikhil Bhatt</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
