--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <br>
   <section class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/nikhil--bhatt"><strong>LinkedIn</strong></a>
-    <a class="footer-link" href=""><strong>Twitter</strong></a>
+    <a class="footer-link" href="https://twitter.com/_nikhil_bhatt"><strong>Twitter</strong></a>
     <a class="footer-link" href="https://instagram.com/nikhil_bhatt21_?utm_medium=copy_link"><strong>Instagram</strong> </a>
     <p class="copyright">© 2021 Nikhil Bhatt </p>
   </section>
