--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
 
         </div>
-        <a href="#" class="btnn">See My Work</a>
+        <a href="#projects" class="btnn">See My Work</a>
         <div class="media-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.facebook.com/nikhil.bhatt.391/"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://instagram.com/nikhil_bhatt21_?utm_medium=copy_link"><i class="fab fa-instagram"></i></a>
+          <a href="https://twitter.com/_nikhil_bhatt"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
     </section>
